# Proyecto_final

./: .env.example  .gitignore  App.tsx  README.md  README_TEMP.md  babel.config.js  composer.ps1  dir.txt  install dep.sh  install.ps1  new-fullstack.ps1  package-lock.json  package.json  tailwind.config.js
MiApp/: README.md
api/: .env.example  eslint.config.js  package-lock.json  package.json  passtest.js  test-mongo.js  tsconfig.app.json  tsconfig.json
api/sql/: schema.sql
app/: app.py
archive/: HerramientasAmbiental.tsx  HerramientasBiologia.tsx  HerramientasCienciasSociales.tsx  HerramientasCivica.tsx  HerramientasCocina.tsx  HerramientasEstadistica.tsx  HerramientasFilosofia.tsx  HerramientasInformatica.tsx  HerramientasMusica.tsx  HerramientasNaturales.tsx  HerramientasPolitica.tsx  HerramientasVidaPractica.tsx
audits/: bug-checklist-2026-02-20.md
auto docs/: .gitignore  Cargo.toml  README.md  README_completo.md  auto_docs_ollama.py  info.md  main.rs  run.ps1
auto docs/diccionario/: BUG_FIX_README.md  INSTALL_INSTRUCTIONS.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  TECHNICAL_NOTES.md  USAGE_EXAMPLES.md
docs/: api-readonly-catalogo.md  book-editor.md  bootstrap-admin.md  estado-actual-vs-roadmap.md  generador-prompts-inventario.md  glosario.md  info  politica-mora.md  roles.md  sqlite-dictionary-api.md
install/: api.ps1  build_wiktionary_sqlite.py  compress_sqlite.ps1  diccionario.ps1  extras.ps1  extras_integration_example.ps1  git.ps1  mobile.ps1  optimize_sqlite_zlib.py  servidor.ps1  web.ps1
scripts/: generate-generator-prompt-assets.mjs
(+4112 files in other folders)
