[package]
name = "auto-docs-ollama"
version = "0.1.0"
edition = "2021"
description = "Documentador automático de proyectos usando Ollama LLM local"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rusqlite = { version = "0.31", features = ["bundled"] }
